fix: Dropdown align

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -249,13 +249,13 @@ body {
   }
 
   .navbar-dropdown {
-    background-color: var(--navbar-menu-background);
-    border: 1px solid var(--navbar-menu-border-color);
+    background-color: #131313;
+    border: 1px solid #131313;
     border-top: none;
     border-radius: 0 0 0.25rem 0.25rem;
     display: none;
     top: 100%;
-    left: 0;
+    right: 0;
     min-width: 100%;
     position: absolute;
   }
